--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-plugin-styled-components": "^1.7.1",
     "date-fns": "^2.0.0-alpha.7",
     "downshift": "^2.2.3",
+    "formik": "^2.2.6",
     "lodash.debounce": "^4.0.8",
     "next": "^10.0.3",
     "nprogress": "^0.2.0",
@@ -29,10 +30,12 @@
     "react-dom": "^16.5.2",
     "react-icons": "^4.1.0",
     "react-redux": "^7.2.2",
+    "react-text-mask": "^5.4.3",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.2.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.13.13",
