--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "downshift": "^2.2.3",
     "formik": "^2.2.6",
     "lodash.debounce": "^4.0.8",
+    "moment": "^2.29.1",
     "next": "^10.0.3",
     "nprogress": "^0.2.0",
     "react": "^16.5.2",
