--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@date-io/moment": "^1.3.13",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.3.10",
     "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.21.0",
     "babel-core": "^7.0.0-bridge.0",
