--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@date-io/moment": "^1.3.13",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
+    "@material-ui/pickers": "^3.3.10",
     "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.21.0",
     "babel-core": "^7.0.0-bridge.0",
@@ -30,6 +33,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-icons": "^4.1.0",
+    "react-number-format": "^4.5.5",
     "react-redux": "^7.2.2",
     "react-text-mask": "^5.4.3",
     "redux": "^4.0.5",
