--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boilerplate-react-next-ui",
+  "name": "olimpia-digital-ui",
   "version": "0.1.0",
   "description": "",
   "private": true,
